--- a/apworlds.html
+++ b/apworlds.html
@@ -52,7 +52,7 @@
                     </p>
                 </header>
 
-                <h2>APWorlds (231)</h2>
+                <h2>APWorlds (233)</h2>
                 
                 <small>[-- Meta APWorlds]</small>
                 <small>&emsp;<a href="#APBingo">APBingo (Meta)</a></small>
@@ -60,7 +60,7 @@
                 <small>&emsp;<a href="#LocalYAMLCreator">Local YAML Creator (Meta)</a></small>
                 <small>&emsp;<a href="#Manual">Manual (Meta)</a></small>
                 <small>&emsp;<a href="#Shahrazad">Shahrazad (Meta)</a></small>
-                <small>&emsp;<a href="#Slotlock">Slotlock (Meta)</a></small>
+                <small>&emsp;<a href="#SlotLock">SlotLock (Meta)</a></small>
                 <small>&emsp;<a href="#SpoilerFreeTextClient">Spoiler-Free Text Client (Meta)</a></small>
                 <small>&emsp;<a href="#UniversalTracker">Universal Tracker (Meta)</a></small>
                 <br />
@@ -173,12 +173,12 @@
                 <small>&emsp;<a href="#HuniePop2DoubleDate">HuniePop 2: Double Date (PC - 18+)</a></small>
                 <br />
                 <small><a href="#Hylics2">Hylics 2 (PC)</a></small>
-                <!-- <small><a href="#Increlution">Increlution (PC)</a></small> -->
                 <small><a href="#Inscryption">Inscryption (PC)</a></small>
                 <small><a href="#IntoTheBreach">Into the Breach (PC)</a></small>
                 <small><a href="#IttleDew2">Ittle Dew 2+ (PC)</a></small>
                 <small><a href="#JakAndDaxterThePrecursorLegacy">Jak and Daxter: The Precursor Legacy (PS2)</a></small>
                 <small><a href="#KeepTalkingAndNobodyExplodes">Keep Talking and Nobody Explodes (PC)</a></small>
+                <small><a href="#KeymastersKeep">Keymaster's Keep (PC)</a></small>
                 <small><a href="#Kindergarten2">Kindergarten 2 (PC - 18+)</a></small>
                 <br />
                 <small>[Kingdom Hearts Franchise]</small>
@@ -251,6 +251,7 @@
                 <small><a href="#Osu">Osu! (PC)</a></small>
                 <small><a href="#OuterWilds">Outer Wilds (PC)</a></small>
                 <small><a href="#Overcooked2">Overcooked! 2 (PC)</a></small>
+                <small><a href="#OxygenNotIncluded">Oxygen Not Included (PC)</a></small>
                 <br />
                 <small>[Pokémon Franchise]</small>
                 <small>&emsp;<a href="#PokemonRedAndBlue">Pokémon Red and Blue (GB)</a></small>
@@ -371,6 +372,7 @@
                 <h3 style="padding-top:24px"><span id="APBingo"></span> APBingo (Meta)</h3>
 
                 <ul>
+                    <li>Generate bingo cards out of location checks from the multiworld</li>
                     <li><strong>APWorld</strong> [<a href="https://github.com/Cynichill/APBingo/releases">Link</a>]</li>
                     <li><strong>Client - Alternate</strong> [<a href="https://sephdb.github.io/APBingo-Web/bingoview.html">Link</a>]</li>
                     <li><strong>Client - Alternate</strong> [<a href="https://cjmang.github.io/APBingoTracker/">Link</a>]</li>
@@ -381,6 +383,7 @@
                 <h3><span id="ChristmasDelivery"></span> Christmas Delivery (Meta)</h3>
 
                 <ul>
+                    <li>Drop item gifts in the right chimneys as Santa</li>
                     <li><strong>APWorld + Game</strong> [<a href="https://github.com/ObsidianMakerDevelopment/christmasdeliveryapworld/releases">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1317840527760298045">Link</a>]</li>
                 </ul>
@@ -388,6 +391,7 @@
                 <h3><span id="LocalYAMLCreator"></span> Local YAML Creator (Meta)</h3>
 
                 <ul>
+                    <li>GUI to create YAML files for installed APWorlds</li>
                     <li><strong>APWorld</strong> [<a href="https://github.com/Silvris/Archipelago/releases">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1278481800577941678">Link</a>]</li>
                 </ul>
@@ -395,6 +399,7 @@
                 <h3><span id="Manual"></span> Manual (Meta)</h3>
 
                 <ul>
+                    <li>Framework to create custom APWorlds where checks are sent manually</li>
                     <li><strong>Client</strong> [<a href="https://github.com/ManualForArchipelago/Manual/releases">Link</a>]</li>
                     <li><strong>Discord Server</strong> [<a href="https://discord.gg/T5bcsVHByx">Link</a>]</li>
                 </ul>
@@ -402,13 +407,15 @@
                 <h3><span id="Shahrazad"></span> Shahrazad (Meta)</h3>
 
                 <ul>
+                    <li>A fraction of multiworld slots are locked until corresponding unlock items are found</li>
                     <li><strong>APWorld</strong> [<a href="https://github.com/qwint/ap-shahrazad/releases">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1191670867403476992">Link</a>]</li>
                 </ul>
 
-                <h3><span id="Slotlock"></span> Slotlock (Meta)</h3>
+                <h3><span id="SlotLock"></span> SlotLock (Meta)</h3>
 
                 <ul>
+                    <li>Alternative to Shahrazad</li>
                     <li><strong>APWorld</strong> [<a href="https://github.com/gjgfuj/SlotLock/releases">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1191670867403476992">Link</a>]</li>
                 </ul>
@@ -416,6 +423,7 @@
                 <h3><span id="SpoilerFreeTextClient"></span> Spoiler-Free Text Client (Meta)</h3>
 
                 <ul>
+                    <li>Text client that doesn't show game-specific information to avoid spoilers</li>
                     <li><strong>APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1282381904812970096/1282382016087851018">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1282381904812970096">Link</a>]</li>
                 </ul>
@@ -423,6 +431,7 @@
                 <h3><span id="UniversalTracker"></span> Universal Tracker (Meta)</h3>
 
                 <ul>
+                    <li>Tracker client</li>
                     <li><strong>APWorld</strong> [<a href="https://github.com/FarisTheAncient/Archipelago/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> Read in Discord [<a href="https://discord.com/channels/731205301247803413/1170094879142051912/1178365016248942664">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1170094879142051912">Link</a>]</li>
@@ -554,6 +563,7 @@
                 <h3><span id="Archipela-Go"></span> Archipela-Go! (Android)</h3>
 
                 <ul>
+                    <li>Reach locations in the real world to unlock checks</li>
                     <li><strong>APWorld + App</strong> [<a href="https://github.com/aki665/react-native-archipelago/releases">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1203890996794884126">Link</a>]</li>
                 </ul>
@@ -561,6 +571,7 @@
                 <h3><span id="ArchipIDLE"></span> ArchipIDLE (Web)</h3>
 
                 <ul>
+                    <li>Idle game that sends out checks on a timer</li>
                     <li><strong>Officially supported. APWorld included with Archipelago installation</strong></li>
                     <li><strong>Website</strong> [<a href="https://idle.multiworld.link/">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://github.com/ArchipelagoMW/Archipelago/blob/main/worlds/archipidle/docs/guide_en.md">Link</a>]</li>
@@ -579,6 +590,7 @@
                 <h3><span id="Autopelago"></span> Autopelago (PC)</h3>
 
                 <ul>
+                    <li>Idle game with a rat</li>
                     <li><strong>APWorld + Game</strong> [<a href="https://github.com/airbreather/Autopelago/releases">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1307517897194868768">Link</a>]</li>
                 </ul>
@@ -1105,6 +1117,7 @@
 
                 <ul>
                     <li><strong>APWorld</strong> [<a href="https://github.com/cjmang/Archipelago/releases">Link</a>]</li>
+                    <li><strong>Tracker</strong> EmoTracker pack [<a href="https://github.com/neomatamune/gstla_emotracker_pack">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://github.com/cjmang/Archipelago/blob/gstla/worlds/gstla/docs/setup_en.md">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1055515261270241320">Link</a>]</li>
                 </ul>
@@ -1112,7 +1125,7 @@
                 <h3><span id="GrimDawn"></span> Grim Dawn (PC)</h3>
 
                 <ul>
-                    <li><strong>APWorld</strong> [<a href="https://github.com/FarisTheAncient/Archipelago/releases">Link</a>]</li>
+                    <li><strong>APWorld</strong> [<a href="https://github.com/routhken/Archipelago/releases">Link</a>]</li>
                     <li><strong>Game Mod</strong> [<a href="https://www.nexusmods.com/grimdawn/mods/167">Link</a>]</li>
                     <li><strong>Tracker</strong> PopTracker Pack [<a href="https://github.com/routhken/Grim_Dawn_tracker/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> Read it in the Discord thread [<a href="https://discord.com/channels/731205301247803413/1114646643225137224/1212473211820707901">Link</a>]</li>
@@ -1215,13 +1228,6 @@
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/1043593298247417929">Link</a>]</li>
                 </ul>
 
-                <!-- <h3><span id="Increlution"></span> Increlution (PC)</h3>
-
-                <ul>
-                    <li><strong>APWorld + Game Mod + Setup Guide</strong> [<a href="https://github.com/spineraks-org/ArchipelagoIncrelution/releases">Link</a>]</li>
-                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1276680264768032778">Link</a>]</li>
-                </ul> -->
-
                 <h3><span id="Inscryption"></span> Inscryption (PC)</h3>
 
                 <ul>
@@ -1265,6 +1271,15 @@
                     <li><strong>Game Mod</strong> [<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=3247225189">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://github.com/GreenPower713/Archipelago/blob/main/worlds/ktane/docs/setup_en.md">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1058549067107532840">Link</a>]</li>
+                </ul>
+
+                <h3><span id="KeymastersKeep"></span> Keymaster's Keep (PC)</h3>
+
+                <ul>
+                    <li>Multi-game logically-locked objective bingo in a randomized keep</li>
+                    <li><strong>APWorld</strong> [<a href="https://github.com/SerpentAI/Archipelago/releases">Link</a>]</li>
+                    <li><strong>Tracker</strong> In-game tracker</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1321323711676284939">Link</a>]</li>
                 </ul>
 
                 <h3><span id="Kindergarten2"></span> Kindergarten 2 (PC - 18+)</h3>
@@ -1468,6 +1483,7 @@
 
                 <ul>
                     <li><strong>Officially supported. APWorld included with Archipelago installation</strong></li>
+                    <li><strong>Beta APWorld</strong> 1.8.x releases [<a href="https://github.com/jamesbrq/ArchipelagoMLSS/releases">Link</a>]</li>
                     <li><strong>Tracker</strong> PopTracker Pack [<a href="https://github.com/seto10987/MLSS-PopTracker/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/Mario%20&%20Luigi%20Superstar%20Saga/setup/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/1257453738612756632">Link</a>]</li>
@@ -1766,6 +1782,13 @@
                     <li><strong>Game Mod</strong> [<a href="https://github.com/toasterparty/oc2-modding/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/Overcooked!%202/setup/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/1043593072174440448">Link</a>]</li>
+                </ul>
+
+                <h3><span id="OxygenNotIncluded"></span> Oxygen Not Included (PC)</h3>
+
+                <ul>
+                    <li><strong>APWorld + Game Mod</strong> [<a href="https://github.com/ShadowKitty42/ONI-Archipelago/releases">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1209238808625946634">Link</a>]</li>
                 </ul>
 
                 <h2>Pokémon Franchise</h2>
@@ -2214,6 +2237,7 @@
 
                 <ul>
                     <li><strong>Officially supported. APWorld included with Archipelago installation</strong></li>
+                    <li><strong>Beta APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1090821869340467332/1321323421069737986">Link</a>]</li>
                     <li><strong>Tracker</strong> PopTracker Pack [<a href="https://github.com/Br00ty/tloz_brooty/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/The%20Legend%20of%20Zelda/multiworld/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/1090821869340467332">Link</a>]</li>
