--- a/index.html
+++ b/index.html
@@ -49,6 +49,56 @@
                     </p>
                 </header>
 
+                <h2 id="W202452">Week of December 23-29, 2024</h2>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> Ape Escape [<a href="apworlds.html#ApeEscape">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Banjo-Tooie [<a href="apworlds.html#BanjoTooie">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> ChecksMate [<a href="apworlds.html#ChecksMate">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Don't Starve Together [<a href="apworlds.html#DontStarveTogether">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Flipwitch - Forbidden Sex Hex [<a href="apworlds.html#FlipWitchForbiddenSexHex">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Hades [<a href="apworlds.html#Hades">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> HuniePop [<a href="apworlds.html#HuniePop">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Lunacid [<a href="apworlds.html#Lunacid">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Osu! [<a href="apworlds.html#Osu">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Outer Wilds [<a href="apworlds.html#OuterWilds">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Shapez [<a href="apworlds.html#Shapez">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> SlotLock [<a href="apworlds.html#SlotLock">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Turnip Boy Commits Tax Evasion [<a href="apworlds.html#TurnipBoyCommitsTaxEvasion">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Yooka-Laylee [<a href="apworlds.html#YookaLaylee">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong>ChecksMate [<a href="apworlds.html#ChecksMate">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong>Don't Starve Together [<a href="apworlds.html#DontStarveTogether">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong>FlipWitch - Forbidden Sex Hex [<a href="apworlds.html#FlipWitchForbiddenSexHex">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong>Hades [<a href="apworlds.html#Hades">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong>Here Comes Niko! [<a href="apworlds.html#HereComesNiko">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong>HuniePop [<a href="apworlds.html#HuniePop">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong>Lunacid [<a href="apworlds.html#Lunacid">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong>Muse Dash [<a href="apworlds.html#MuseDash">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong>Outer Wilds [<a href="apworlds.html#OuterWilds">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong>Raft [<a href="apworlds.html#Raft">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong>Shapez [<a href="apworlds.html#Shapez">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong>Shivers [<a href="apworlds.html#Shivers">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong>The Messenger [<a href="apworlds.html#TheMessenger">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong>The Witness [<a href="apworlds.html#TheWitness">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong>Timespinner [<a href="apworlds.html#Timespinner">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong>Turnip Boy Commits Tax Evasion [<a href="apworlds.html#TurnipBoyCommitsTaxEvasion">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong>Yooka-Laylee [<a href="apworlds.html#YookaLaylee">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New APWorld</strong> Keymaster's Keep [<a href="apworlds.html#KeymastersKeep">Link</a>]</li>
+                    <li><strong>New APWorld</strong> Oxygen Not Included [<a href="apworlds.html#OxygenNotIncluded">Link</a>]</li>
+                </ul>
+                
+                <ul>
+                    <li><strong>New Beta APWorld</strong> Mario & Luigi: Superstar Saga [<a href="apworlds.html#MarioAndLuigiSuperstarSaga">Link</a>]</li>
+                    <li><strong>New Beta APWorld</strong> The Legend of Zelda [<a href="apworlds.html#TheLegendOfZelda">Link</a>]</li>
+                </ul>
+
+
                 <h2 id="W202451">Week of December 16-22, 2024</h2>
 
                 <ul>
@@ -83,7 +133,7 @@
 
                 <ul>
                     <li><strong>New APWorld</strong> Christmas Delivery [<a href="apworlds.html#ChristmasDelivery">Link</a>]</li>
-                    <li><strong>New APWorld</strong> Slotlock [<a href="apworlds.html#Slotlock">Link</a>]</li>
+                    <li><strong>New APWorld</strong> SlotLock [<a href="apworlds.html#SlotLock">Link</a>]</li>
                 </ul>
 
                 <ul>
