--- a/apworlds.html
+++ b/apworlds.html
@@ -52,7 +52,7 @@
                     </p>
                 </header>
 
-                <h2>APWorlds (233)</h2>
+                <h2>APWorlds (235)</h2>
                 
                 <small>[-- Meta APWorlds]</small>
                 <small>&emsp;<a href="#APBingo">APBingo (Meta)</a></small>
@@ -264,6 +264,7 @@
                 <small><a href="#Psychonauts">Psychonauts (PC)</a></small>
                 <small><a href="#RabiRibi">Rabi-Ribi (PC)</a></small>
                 <small><a href="#Raft">Raft (PC)</a></small>
+                <small><a href="#RatchetAndClankGoingCommando"> Ratchet & Clank: Going Commando (PS2)</a></small>
                 <br />
                 <small>[Resident Evil Franchise]</small>
                 <small>&emsp;<a href="#ResidentEvil2">Resident Evil 2 (Remake) (PC - 18+)</a></small>
@@ -301,6 +302,7 @@
                 <small><a href="#SoulBlazer">Soul Blazer (SNES)</a></small>
                 <small><a href="#Spelunker">Spelunker (NES)</a></small>
                 <small><a href="#Spelunky2">Spelunky 2 (PC)</a></small>
+                <small><a href="#Spinball">Spinball (Web)</a></small>
                 <!-- <small><a href="#SpinRhythmXD">Spin Rhythm XD (PC)</a></small> -->
                 <small><a href="#SpongeBobSquarePantsBattleForBikiniBottom">SpongeBob SquarePants: Battle For Bikini Bottom (GC)</a></small>
                 <small><a href="#Stacklands">Stacklands (PC)</a></small>
@@ -711,6 +713,7 @@
 
                 <ul>
                     <li><strong>APWorld</strong> [<a href="https://github.com/kl3cks7r/Archipelago/releases">Link</a>]</li>
+                    <li><strong>Game Mod</strong> [<a href="https://github.com/cave-story-randomizer/cave-story-randomizer/releases">Link</a>]</li>
                     <li><strong>Tracker</strong> PopTracker Pack [<a href="https://github.com/randomcodegen/caver-tracker-ap/releases">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1083474864150695956">Link</a>]</li>
                 </ul>
@@ -742,7 +745,8 @@
                 <h3><span id="ChainedEchoes"></span> Chained Echoes (PC)</h3>
 
                 <ul>
-                    <li><strong>APWorld + Game Mod</strong> [<a href="https://github.com/Samupo/ChainedEchoesRandomizer/releases">Link</a>]</li>
+                    <li><strong>APWorld</strong> [<a href="https://github.com/Samupo/ChainedEchoesAPWorld/releases">Link</a>]</li>
+                    <li><strong>Game Mod</strong> [<a href="https://github.com/Samupo/ChainedEchoesRandomizer/releases">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1306059155899154493">Link</a>]</li>
                 </ul>
 
@@ -1676,7 +1680,7 @@
 
                 <ul>
                     <li><strong>Officially supported. APWorld included with Archipelago installation</strong></li>
-                    <li><strong>Beta APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1269092909081432169/1313727681111527487">Link</a>]</li>
+                    <li><strong>Beta APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1269092909081432169/1325716403323670528">Link</a>]</li>
                     <li><strong>Tracker</strong> PopTracker Pack [<a href="https://github.com/Cyb3RGER/minecraft_rando_tracker/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/Minecraft/minecraft/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/837136185662111746">Link</a>]</li>
@@ -1872,9 +1876,17 @@
                 <ul>
                     <li><strong>Officially supported. APWorld included with Archipelago installation</strong></li>
                     <li><strong>Game Mods</strong> [<a href="https://www.raftmodding.com/loader">Link</a>] [<a href="https://www.raftmodding.com/mods/modutils">Link</a>] [<a href="https://www.raftmodding.com/mods/raftipelago">Link</a>]</li>
+                    <li><strong>Beta Game Mod</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/937206960472883243/1323805768771833948">Link</a>]</li>
                     <li><strong>Tracker</strong> PopTracker Pack [<a href="https://github.com/PrimePentad/Raft-AP-Poptracker/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/Raft/setup/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/937206960472883243">Link</a>]</li>
+                </ul>
+
+                <h3><span id="RatchetAndClankGoingCommando"></span> Ratchet & Clank: Going Commando (PS2)</h3>
+
+                <ul>
+                    <li><strong>APWorld</strong> [<a href="https://github.com/evilwb/APRac2/releases">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1325015730218860554">Link</a>]</li>
                 </ul>
 
                 <h2>Resident Evil Franchise</h2>
@@ -2129,6 +2141,14 @@
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1142626744629735555">Link</a>]</li>
                 </ul>
 
+                <h3><span id="Spinball"></span> Spinball (Web)</h3>
+
+                <ul>
+                    <li><strong>APWorld</strong> [<a href="https://github.com/spineraks-org/ArchipelagoSpinball/releases">Link</a>]</li>
+                    <li><strong>Website</strong> [<a href="https://spineraks-pinball.netlify.app/">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1325257989891952742">Link</a>]</li>
+                </ul>
+
                 <!-- <h3><span id="SpinRhythmXD"></span> Spin Rhythm XD (PC)</h3>
 
                 <ul>
@@ -2237,7 +2257,7 @@
 
                 <ul>
                     <li><strong>Officially supported. APWorld included with Archipelago installation</strong></li>
-                    <li><strong>Beta APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1090821869340467332/1321323421069737986">Link</a>]</li>
+                    <li><strong>Beta APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1090821869340467332/1325640637214752829">Link</a>]</li>
                     <li><strong>Tracker</strong> PopTracker Pack [<a href="https://github.com/Br00ty/tloz_brooty/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/The%20Legend%20of%20Zelda/multiworld/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/1090821869340467332">Link</a>]</li>
@@ -2293,7 +2313,7 @@
 
                 <ul>
                     <li><strong>APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1130706151303041054/1287847292237516872">Link</a>]</li>
-                    <li><strong>Tracker</strong> PopTracker Pack - Download from Discord [<a href="https://discord.com/channels/731205301247803413/1130706151303041054/1266085792149930136">Link</a>]</li>
+                    <li><strong>Tracker</strong> PopTracker Pack [<a href="https://github.com/OmegaZeron/Oracle-of-Seasons-AP-Poptracker-Pack/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://github.com/Dinopony/Archipelago/blob/oos/worlds/tloz_oos/docs/oos_setup_en.md">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1130706151303041054">Link</a>]</li>
                 </ul>
