--- a/index.html
+++ b/index.html
@@ -49,6 +49,81 @@
                     </p>
                 </header>
 
+                <h2 id="W202501">Week of December 30, 2024 - January 5, 2025</h2>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> Astalon: Tears of the Earth [<a href="apworlds.html#AstalonTearsOfTheEarth">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Autopelago [<a href="apworlds.html#Autopelago">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Banjo-Tooie [<a href="apworlds.html#BanjoTooie">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Cave Story [<a href="apworlds.html#CaveStory">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> ChecksMate [<a href="apworlds.html#ChecksMate">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Dark Souls: Remastered [<a href="apworlds.html#DarkSoulsRemastered">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Dome Keeper [<a href="apworlds.html#DomeKeeper">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Don't Starve Together [<a href="apworlds.html#DontStarveTogether">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Donkey Kong Country 2: Diddy's Kong Quest [<a href="apworlds.html#DonkeyKongCountry2DiddysKongQuest">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Gauntlet Legends [<a href="apworlds.html#GauntletLegends">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> HuniePop [<a href="apworlds.html#HuniePop">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> HuniePop 2: Double Date [<a href="apworlds.html#HuniePop2DoubleDate">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Keymaster's Keep [<a href="apworlds.html#KeymastersKeep">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Oxygen Not Included [<a href="apworlds.html#OxygenNotIncluded">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Reventure [<a href="apworlds.html#Reventure">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Risk of Rain [<a href="apworlds.html#RiskOfRain">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Scooby-Doo! Night of 100 Frights [<a href="apworlds.html#ScoobyDooNightOf100Frights">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Shapez [<a href="apworlds.html#Shapez">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> SlotLock [<a href="apworlds.html#SlotLock">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> The Legend of Zelda: The Wind Waker [<a href="apworlds.html#TheLegendOfZeldaTheWindWaker">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Toejam & Earl [<a href="apworlds.html#ToejamAndEarl">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Turnip Boy Commits Tax Evasion [<a href="apworlds.html#TurnipBoyCommitsTaxEvasion">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Beta APWorld Update</strong> Aquaria [<a href="apworlds.html#Aquaria">Link</a>]</li>
+                    <li><strong>Beta APWorld Update</strong> Mario & Luigi: Superstar Saga [<a href="apworlds.html#MarioAndLuigiSuperstarSaga">Link</a>]</li>
+                    <li><strong>Beta APWorld Update</strong> Minecraft [<a href="apworlds.html#Minecraft">Link</a>]</li>
+                    <li><strong>Beta APWorld Update</strong> The Legend of Zelda [<a href="apworlds.html#TheLegendOfZelda">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Beta Game Mod Update</strong> Aquaria [<a href="apworlds.html#Aquaria">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> Astalon: Tears of the Earth [<a href="apworlds.html#AstalonTearsOfTheEarth">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Autopelago [<a href="apworlds.html#Autopelago">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Dark Souls: Remastered [<a href="apworlds.html#DarkSoulsRemastered">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Dome Keeper [<a href="apworlds.html#DomeKeeper">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Don't Starve Together [<a href="apworlds.html#DontStarveTogether">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> HuniePop [<a href="apworlds.html#HuniePop">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> HuniePop 2: Double Date [<a href="apworlds.html#HuniePop2DoubleDate">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Ori and the Blind Forest [<a href="apworlds.html#OriAndTheBlindForest">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Oxygen Not Included [<a href="apworlds.html#OxygenNotIncluded">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Reventure [<a href="apworlds.html#Reventure">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Risk of Rain [<a href="apworlds.html#RiskOfRain">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Shapez [<a href="apworlds.html#Shapez">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Stardew Valley [<a href="apworlds.html#StardewValley">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> The Messenger [<a href="apworlds.html#TheMessenger">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Timespinner [<a href="apworlds.html#Timespinner">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Turnip Boy Commits Tax Evasion [<a href="apworlds.html#TurnipBoyCommitsTaxEvasion">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New APWorld</strong> Ratchet & Clank: Going Commando [<a href="apworlds.html#RatchetAndClankGoingCommando">Link</a>]</li>
+                    <li><strong>New APWorld</strong> Spinball [<a href="apworlds.html#Spinball">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Beta APWorld</strong> Yu-Gi-Oh! Ultimate Masters: WCT 2006 [<a href="apworlds.html#YuGiOhUltimateMastersWCT2006">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Beta Game Mod</strong> Raft [<a href="apworlds.html#Raft">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Game PR Opened</strong> Loonyland: Halloween Hill [<a href="https://github.com/ArchipelagoMW/Archipelago/pull/4427">Link</a>]</li>
+                </ul>
+
+
                 <h2 id="W202452">Week of December 23-29, 2024</h2>
 
                 <ul>
