--- a/apworlds.html
+++ b/apworlds.html
@@ -52,7 +52,7 @@
                     </p>
                 </header>
 
-                <h2>APWorlds (235)</h2>
+                <h2>APWorlds (234)</h2>
                 
                 <small>[-- Meta APWorlds]</small>
                 <small>&emsp;<a href="#APBingo">APBingo (Meta)</a></small>
@@ -140,7 +140,7 @@
                 <small>[Final Fantasy Franchise - Mainline Series]</small>
                 <small>&emsp;<a href="#FinalFantasy1">Final Fantasy (NES)</a></small>
                 <small>&emsp;<a href="#FinalFantasy4">Final Fantasy IV (SNES)</a></small>
-                <small>&emsp;<a href="#FinalFantasy5">Final Fantasy V (SNES)</a></small>
+                <!-- <small>&emsp;<a href="#FinalFantasy5">Final Fantasy V (SNES)</a></small> -->
                 <small>&emsp;<a href="#FinalFantasy6">Final Fantasy VI (SNES)</a></small>
                 <small>&emsp;<a href="#FinalFantasy12OpenWorld">Final Fantasy XII: Open World (PC)</a></small>
                 <small>&emsp;<a href="#FinalFantasy12TrialMode">Final Fantasy XII: Trial Mode (PC)</a></small>
@@ -1009,13 +1009,13 @@
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1170144930610557008">Link</a>]</li>
                 </ul>
 
-                <h3><span id="FinalFantasy5"></span><span id="FinalFantasy5CareerDay"></span> Final Fantasy V (SNES)</h3>
+                <!-- <h3><span id="FinalFantasy5"></span><span id="FinalFantasy5CareerDay"></span> Final Fantasy V (SNES)</h3>
 
                 <ul>
                     <li><strong>APWorld</strong> [<a href="https://github.com/cleartonic/arch_ffvcd/releases">Link</a>]</li>
                     <li><strong>Tracker</strong> PopTracker Pack [<a href="https://github.com/seto10987/FFV-Career-Day-AP">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1074658481992388618">Link</a>]</li>
-                </ul>
+                </ul> -->
 
                 <h3><span id="FinalFantasy6"></span><span id="FinalFantasy6WorldsCollide"></span> Final Fantasy VI (SNES)</h3>
 
