--- a/apworlds.html
+++ b/apworlds.html
@@ -49,10 +49,12 @@
                     <p>
                         <strong>Archipelago Discord Server</strong> [<a href="https://discord.gg/8Z65BR2">Link</a>]<br />
                         <strong>Alternative Resource:</strong> <a href="https://docs.google.com/spreadsheets/d/1733DtKxylcSmCxn216rOVkJNS-aezFu8nURRw86CjKc/edit?gid=58422002">Community-Maintained Google Sheet</a>
+                        <br />
+                        <span>Last Updated: January 13, 2025</span>
                     </p>
                 </header>
 
-                <h2>APWorlds (234)</h2>
+                <h2>APWorlds (237)</h2>
                 
                 <small>[-- Meta APWorlds]</small>
                 <small>&emsp;<a href="#APBingo">APBingo (Meta)</a></small>
@@ -130,6 +132,7 @@
                 <small>&emsp;<a href="#DOOM1993">DOOM 1993 (PC)</a></small>
                 <small>&emsp;<a href="#DOOM2">DOOM II (PC)</a></small>
                 <br />
+                <small><a href="#DoronkoWanko">Doronko Wanko (PC)</a></small>
                 <small><a href="#DukeNukem3DAtomicEdition">Duke Nukem 3D: Atomic Edition (PC)</a></small>
                 <small><a href="#EarthBound">EarthBound (SNES)</a></small>
                 <small><a href="#EnderLiliesQuietusOfTheKnights">Ender Lilies: Quietus of the Knights (PC)</a></small>
@@ -158,6 +161,7 @@
                 <br />
                 <small><a href="#FlipWitchForbiddenSexHex">FlipWitch - Forbidden Sex Hex (PC - 18+)</a></small>
                 <small><a href="#GauntletLegends">Gauntlet Legends (N64)</a></small>
+                <small><a href="#GettingOverItWithBennettFoddy">Getting Over It with Bennett Foddy (PC)</a></small>
                 <small><a href="#GoldenSunTheLostAge">Golden Sun: The Lost Age (GBA)</a></small>
                 <small><a href="#GrimDawn">Grim Dawn (PC)</a></small>
                 <small><a href="#GuildWars2">Guild Wars 2 (PC)</a></small>
@@ -330,6 +334,7 @@
                 <small>&emsp;<a href="#SMZ3">SMZ3 (SNES)</a></small>
                 <br />
                 <small><a href="#TheMessenger">The Messenger (PC)</a></small>
+                <small><a href="#TheSims4">The Sims 4 (PC)</a></small>
                 <small><a href="#TheWitness">The Witness (PC)</a></small>
                 <small><a href="#Timespinner">Timespinner (PC)</a></small>
                 <small><a href="#ToejamAndEarl">Toejam & Earl (GEN)</a></small>
@@ -474,7 +479,7 @@
                 <h3><span id="ActRaiser"></span> ActRaiser (SNES)</h3>
 
                 <ul>
-                    <li><strong>APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1113529234800005181/1310451292120023080">Link</a>]</li>
+                    <li><strong>APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1113529234800005181/1326011277998293106">Link</a>]</li>
                     <li><strong>Tracker</strong> PopTracker Pack - Download from Discord [<a href="https://discord.com/channels/731205301247803413/1113529234800005181/1296683088566288488">Link</a>]</li>
                     <li><strong>Setup Guide</strong> Read in Discord [<a href="https://discord.com/channels/731205301247803413/1113529234800005181/1295980708619227148">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1113529234800005181">Link</a>]</li>
@@ -520,7 +525,7 @@
                 <h3><span id="ANIMALWELL"></span> ANIMAL WELL (PC)</h3>
 
                 <ul>
-                    <li><strong>APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1238463626344665119/1316597520817852447">Link</a>]</li>
+                    <li><strong>APWorld</strong> [<a href="https://github.com/ScipioWright/Archipelago-SW/releases">Link</a>]</li>
                     <li><strong>Tracker</strong> PopTracker Pack [<a href="https://github.com/SporyTike/ANIMAL-WELL-AP-Tracker/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://github.com/ScipioWright/Archipelago-SW/blob/animal-well/worlds/animal_well/docs/setup_en.md">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1238463626344665119">Link</a>]</li>
@@ -936,6 +941,14 @@
 
                 <hr />
 
+                <h3><span id="DoronkoWanko"></span> DORONKO WANKO (PC)</h3>
+
+                <ul>
+                    <li><strong>APWorld + Game Mod</strong> [<a href="https://github.com/Vendily/DoronkoWankoArchipelago/releases">Link</a>]</li>
+                    <li><strong>Setup Guide</strong> [<a href="https://github.com/Vendily/DoronkoWankoArchipelago/blob/main/worlds/doronko_wanko/docs/setup_en.md">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1325915019313152097">Link</a>]</li>
+                </ul>
+
                 <h3><span id="DukeNukem3DAtomicEdition"></span><span id="DukeNukem3D"></span> Duke Nukem 3D: Atomic Edition (PC)</h3>
 
                 <ul>
@@ -995,6 +1008,7 @@
 
                 <ul>
                     <li><strong>Officially supported. APWorld included with Archipelago installation</strong></li>
+                    <li><strong>Beta APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/917510025461776445/1326302481268867122">Link</a>]</li>
                     <li><strong>Website (YAML + Patcher)</strong> [<a href="https://finalfantasyrandomizer.com/">Link</a>]</li>
                     <li><strong>Tracker</strong> PopTracker Pack [<a href="https://github.com/haate/FFR_AP_autotracking/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/Final%20Fantasy/multiworld/en">Link</a>]</li>
@@ -1115,6 +1129,13 @@
                     <li><strong>APWorld + Setup Guide</strong> [<a href="https://github.com/jamesbrq/GauntletLegendsAP/releases">Link</a>]</li>
                     <li><strong>Tracker</strong> PopTracker Pack [<a href="https://github.com/Kryen112/gauntlet_legends_n64_ap_tracker/releases">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1195336830258778183">Link</a>]</li>
+                </ul>
+
+                <h3><span id="GettingOverItWithBennettFoddy"></span> Getting Over It with Bennett Foddy (PC)</h3>
+
+                <ul>
+                    <li><strong>APWorld + Game Mod</strong> [<a href="https://github.com/BlastSlimey/CheckingOverIt/releases">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1123510506884444250">Link</a>]</li>
                 </ul>
 
                 <h3><span id="GoldenSunTheLostAge"></span> Golden Sun: The Lost Age (GBA)</h3>
@@ -2257,7 +2278,7 @@
 
                 <ul>
                     <li><strong>Officially supported. APWorld included with Archipelago installation</strong></li>
-                    <li><strong>Beta APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1090821869340467332/1325640637214752829">Link</a>]</li>
+                    <li><strong>Beta APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1090821869340467332/1326688594215174235">Link</a>]</li>
                     <li><strong>Tracker</strong> PopTracker Pack [<a href="https://github.com/Br00ty/tloz_brooty/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/The%20Legend%20of%20Zelda/multiworld/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/1090821869340467332">Link</a>]</li>
@@ -2357,6 +2378,15 @@
                     <li><strong>Tracker</strong> PopTracker Pack [<a href="https://github.com/alwaysintreble/TheMessengerTrackPack/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/The%20Messenger/setup/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/1090822939697500243">Link</a>]</li>
+                </ul>
+
+                <h3><span id="TheSims4"></span> The Sims 4 (PC)</h3>
+
+                <ul>
+                    <li><strong>APWorld</strong> [<a href="https://github.com/meaomeaomeaoo/Archipelago/releases">Link</a>]</li>
+                    <li><strong>Game Mod</strong> [<a href="https://github.com/meaomeaomeaoo/Sims4ArchipelagoMod/releases">Link</a>]</li>
+                    <li><strong>Setup Guide</strong> [<a href="https://github.com/meaomeaomeaoo/Archipelago/blob/main/worlds/sims4/docs/setup_en.md">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1079002955262480424">Link</a>]</li>
                 </ul>
 
                 <h3><span id="TheWitness"></span> The Witness (PC)</h3>
