--- a/index.html
+++ b/index.html
@@ -49,6 +49,72 @@
                     </p>
                 </header>
 
+                <h2 id="W202502">Week of January 6-12, 2025</h2>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> ActRaiser [<a href="apworlds.html#ActRaiser">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Ape Escape [<a href="apworlds.html#ApeEscape">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Autopelago [<a href="apworlds.html#Autopelago">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Banjo-Tooie [<a href="apworlds.html#BanjoTooie">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Brotato [<a href="apworlds.html#Brotato">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Dark Souls: Remastered [<a href="apworlds.html#DarkSoulsRemastered">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Dome Keeper [<a href="apworlds.html#DomeKeeper">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Don't Starve Together [<a href="apworlds.html#DontStarveTogether">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Duke Nukem 3D: Atomic Edition [<a href="apworlds.html#DukeNukem3DAtomicEdition">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> EarthBound [<a href="apworlds.html#EarthBound">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Keymaster's Keep [<a href="apworlds.html#KeymastersKeep">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Metroid: Zero Mission [<a href="apworlds.html#MetroidZeroMission">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Minishoot' Adventures [<a href="apworlds.html#MinishootAdventures">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Oxygen Not Included [<a href="apworlds.html#OxygenNotIncluded">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Ratchet & Clank: Going Commando [<a href="apworlds.html#RatchetAndClankGoingCommando">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Reventure [<a href="apworlds.html#Reventure">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Scooby-Doo! Night of 100 Frights [<a href="apworlds.html#ScoobyDooNightOf100Frights">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Sonic Adventure DX [<a href="apworlds.html#SonicAdventureDX">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Touhou Koumakyou: The Embodiment of Scarlet Devil [<a href="apworlds.html#TouhouKoumakyouTheEmbodimentOfScarletDevil">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Turnip Boy Commits Tax Evasion [<a href="apworlds.html#TurnipBoyCommitsTaxEvasion">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Universal Tracker [<a href="apworlds.html#UniversalTracker">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Beta APWorld Update</strong> Aquaria [<a href="apworlds.html#Aquaria">Link</a>]</li>
+                    <li><strong>Beta APWorld Update</strong> The Legend of Zelda [<a href="apworlds.html#TheLegendOfZelda">Link</a>]</li>
+                    <li><strong>Beta APWorld Update</strong> Mario & Luigi: Superstar Saga [<a href="apworlds.html#MarioAndLuigiSuperstarSaga">Link</a>]</li>
+                    <li><strong>Beta APWorld Update</strong> Yacht Dice [<a href="apworlds.html#YachtDice">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Beta Game Mod Update</strong> Aquaria [<a href="apworlds.html#Aquaria">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> Air Delivery [<a href="apworlds.html#AirDelivery">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Autopelago [<a href="apworlds.html#Autopelago">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Brotato [<a href="apworlds.html#Brotato">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Dark Souls: Remastered [<a href="apworlds.html#DarkSoulsRemastered">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Don't Starve Together [<a href="apworlds.html#DontStarveTogether">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Here Comes Niko! [<a href="apworlds.html#HereComesNiko">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Minishoot' Adventures [<a href="apworlds.html#MinishootAdventures">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Oxygen Not Included [<a href="apworlds.html#OxygenNotIncluded">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Reventure [<a href="apworlds.html#Reventure">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Sonic Adventure DX [<a href="apworlds.html#SonicAdventureDX">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Stardew Valley [<a href="apworlds.html#StardewValley">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> The Messenger [<a href="apworlds.html#TheMessenger">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New APWorld</strong> DORONKO WANKO [<a href="apworlds.html#DoronkoWanko">Link</a>]</li>
+                    <li><strong>New APWorld</strong> Getting Over It with Bennett Foddy [<a href="apworlds.html#GettingOverItWithBennettFoddy">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Beta APWorld</strong> Final Fantasy [<a href="apworlds.html#FinalFantasy1">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Game PR Opened</strong> Banjo-Tooie [<a href="https://github.com/ArchipelagoMW/Archipelago/pull/4471">Link</a>]</li>
+                    <li><strong>New Game PR Opened</strong> The Legend of Zelda: The Wind Waker [<a href="https://github.com/ArchipelagoMW/Archipelago/pull/4458">Link</a>]</li>
+                </ul>
+
                 <h2 id="W202501">Week of December 30, 2024 - January 5, 2025</h2>
 
                 <ul>
