--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
                 <ul>
                     <li><strong>New APWorld</strong> DORONKO WANKO [<a href="apworlds.html#DoronkoWanko">Link</a>]</li>
                     <li><strong>New APWorld</strong> Getting Over It with Bennett Foddy [<a href="apworlds.html#GettingOverItWithBennettFoddy">Link</a>]</li>
+                    <li><strong>New APWorld</strong> The Sims 4 [<a href="apworlds.html#TheSims4">Link</a>]</li>
                 </ul>
 
                 <ul>
